@@ -16,15 +16,21 @@ repositories {
     jcenter()
 }
 
-dependencies {
-    // Use JUnit test framework.
-    testImplementation("junit:junit:4.13")
-
-    // This dependency is used by the application.
-    implementation("com.google.guava:guava:29.0-jre")
-}
-
 application {
     // Define the main class for the application.
     mainClass.set("wow.such.pizza.even.more.App")
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(15))
+    }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
 }
